[package]
name = "oblivious-transfer"
version = "0.1.0"
authors = ["Robin Hundt <24554122+robinhundt@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
blake2 = "0.9.2"
curve25519-dalek = { version = "4.0.0-pre.1", features = ["serde"]}
rand = "0.8.3"
crossbeam = "0.8.0"
aes = "0.7.2"
block-modes = "0.8.1"
thiserror = "1.0.25"
futures = "0.3.15"
hkdf = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
digest = "0.9.0"

[dev-dependencies]
futures = { version = "0.3.15" , features = ["executor"]}
